# hermes-agent-enhanced

./: .bandit.yml  .gitignore  .ruff.toml  .skills_prompt_snapshot.json  AGENTS.md  AGENTS_v2.md  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  QUALITY_REPORT.md  QUICKSTART.md  README.md  SECURITY.md  SOUL.md  config.yaml.example  gateway.pid  install-windows.bat  install.sh  ollama_cloud_models_cache.json  provider_models_cache.json  pyproject.toml  requirements.txt  sanitize.sh
.github/workflows/: ci.yml
observability/baselines/: baseline_samples.jsonl
plugins/: rag_memory_plugin.py  test_plugin_system.py
plugins/auto_compressor/: __init__.py
plugins/auto_workflow/: __init__.py  plugin.yaml
plugins/commercial_grade_enforcer/: __init__.py  acceptance_checklist.py  checkpoint_guard.py  degradation_handler.py  idempotency_guard.py  metrics_collector.py  plugin.yaml  quality_gate.py  verifier_agent.py  wbs_injector.py
plugins/dual_review/: __init__.py  plugin.yaml
plugins/force_compressor/: __init__.py
plugins/hermes-plugin-lineworks/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/hermes-plugin-lineworks/lineworks_platform/: adapter.py  tools.py
plugins/hermes-plugin-lineworks/tests/: test_lineworks_platform.py
plugins/model_router/: __init__.py
plugins/openclaw-airi/: README.md  __init__.py  config.yaml  plugin.json  requirements.txt
plugins/openclaw-superintelligence/: README.md  __init__.py  config.yaml  plugin.json  requirements.txt
plugins/openclaw-web-search/: README.md  __init__.py  config.yaml  plugin.json  requirements.txt
plugins/openclaw-weixin/: README.md  __init__.py  accounts.json  config.yaml  plugin.json  requirements.txt
plugins/plugin_system/: __init__.py  cli.py
plugins/tests/: test_plugins.py
profiles/brainstorm-agent/: SOUL.md  config.yaml
profiles/commander/: SOUL.md  config.yaml
profiles/ops-agent/: SOUL.md  config.yaml
profiles/radar-agent/: SOUL.md  config.yaml
profiles/writing-agent/: SOUL.md  config.yaml
scripts/: AGENT_SPLIT.md  DEV_PLAN.md  __init__.py  __version__.py  _full_system_test.py  ability_activator.py  active_memory.py  agent_company_cron_orchestrator.py  agent_company_engine.py  agent_company_intel_bridge.py  agent_company_runner.py  agent_enhancement_manager.py  agent_enhancement_plugin.py  agent_export.py  agent_export_engine.py  agent_isolation_engine.py  agent_matching_pipeline.py  ai_daily_engine.py  ai_scoring_daemon.py  ai_scoring_v2.py  ai_sixdim_scorer.py  api_gateway.py  archive_compressor.py  archive_old_data.py  audit_logger.py  audit_system.py  auto_ci.py  auto_cleaner.py  auto_healer.py  auto_recall.py  auto_resume_check.py  autoresearch_pipeline.py  batch2_ai_scorer.py  batch_import_clean.py  battle_commander.py  browser_collector.py  check_bilibili_github.py  check_db.py  check_db2.py  check_freshness.py  (+332 more)
services/: hermes-eternal.service  hermes-gateway.service
skills/: .bundled_manifest  .curator_state  .usage.json
skills/.hub/: lock.json
skills/anysearch/: SKILL.md
skills/devops-experts/: SKILL.md
skills/ecc/: SKILL.md
skills/education-training-experts/: SKILL.md
skills/expert-industry-solutions/: SKILL.md
skills/expert-legal/: SKILL.md
skills/expert-project-management/: SKILL.md
skills/expert-quality-assurance/: SKILL.md
skills/expert-system/: SKILL.md
skills/experts-system/: fix_catchphrases.py
skills/gifs/: SKILL.md
skills/hermes/: SKILL.md
skills/hermes-push-v3/: SKILL.md
skills/hermes-upgrade-workflow/: SKILL.md
skills/massive-prompt-generation/: SKILL.md
skills/memory-domain-ai-机器学习/: SKILL.md
skills/openclaw_smart_router/: SKILL.md  ai_analyzer.py  config.example.yaml
skills/operations/: SKILL.md
skills/phase4-actors/: phase4-actors.py
skills/pipeline-orchestrator/: pipeline-orchestrator.py
skills/plan-switcher/: SKILL.md  plan-switcher.py
skills/product-experts/: SKILL.md
skills/productivity/: SKILL.md
skills/psychology-cognition-experts/: SKILL.md
skills/pushplus-wechat/: SKILL.md
skills/rag-memory-enhanced/: SKILL.md
skills/software-development/: SKILL.md
skills/synapse-bus-bootstrap/: SKILL.md
skills/task-scheduler/: SKILL.md
skills/toutiao-enhanced/: SKILL.md
skills/wechat-bing-collector/: SKILL.md
skills/workflow-engine/: workflow_engine.py
vault/: .encryption_key
(+2919 files in other folders)
