[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-enhanced"
version = "0.16.0"
description = "Hermes Agent 增强版 — 商用级AI Agent平台"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Nous Research", email = "info@nousresearch.com"},
]

keywords = ["ai-agent", "hermes", "llm", "automation", "agent-framework"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
]

dependencies = [
    # ——— LLM / 推理 ———
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.5.0",

    # ——— 工具与外部服务 ———
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "playwright>=1.40.0",
    "selenium>=4.15.0",

    # ——— 数据处理 ———
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "jsonschema>=4.20.0",
    "orjson>=3.9.0",

    # ——— 存储 / 持久化 ———
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "redis>=5.0.0",

    # ——— 工作流 / 调度 ———
    "apscheduler>=3.10.0",
    "croniter>=1.4.0",

    # ——— 监控 / 日志 ———
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",

    # ——— 实用工具 ———
    "typing-extensions>=4.8.0",
    "dataclasses-json>=0.6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

db = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
]

[project.scripts]
hermes-enhanced-version = "scripts.__version__:get_version"
hermes-auto-ci = "scripts.auto_ci:run_full_ci"
hermes-audit = "scripts.audit_logger:main"
hermes-gear = "scripts.gear_enforcer:enforce"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-data]
scripts = ["**/*.py", "**/*.sh", "**/*.yaml", "**/*.yml", "**/*.json", "**/*.toml", "**/*.md"]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scripts"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers --asyncio-mode=auto"

[tool.coverage.run]
source = ["scripts"]
omit = ["*/tests/*", "*/venv/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 60
