[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-plugin-lineworks"
version = "0.5.5"
description = "LINE WORKS gateway platform plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Unayung" }]
keywords = ["hermes-agent", "plugin", "lineworks", "works-mobile", "gateway"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "aiohttp>=3.9",
  "PyJWT[crypto]>=2.8",
  "cryptography>=41",
]

[project.urls]
Homepage = "https://github.com/Unayung/hermes-plugin-lineworks"
Source = "https://github.com/Unayung/hermes-plugin-lineworks"
OpenClawPlugin = "https://clawhub.ai/plugins/%40unayung%2Flineworks"

[project.entry-points."hermes_agent.plugins"]
lineworks = "lineworks_platform"

[tool.setuptools]
packages = ["lineworks_platform"]
py-modules = []

[tool.setuptools.package-data]
lineworks_platform = []
